--- a/accesscontrol/templates/accesscontrol/snippets/member_detail.html
+++ b/accesscontrol/templates/accesscontrol/snippets/member_detail.html
@@ -56,7 +56,7 @@
                     {% for group in group_list %}
                         <li role="presentation" class="group {{ group.name }}" data-id="{{ group.id }}"
                             data-member-id="{{ member.id }}" data-name="{{ group.name }}">
-                            <a href="javascript:;">{{ group.name }}</a>
+                            <a href="javascript:;">{% trans group.name %}</a>
                         </li>
                     {% endfor %}
                     {% if user.is_bao %}
