--- a/cashout/templates/cashout/mails/payment_notice.html
+++ b/cashout/templates/cashout/mails/payment_notice.html
@@ -17,7 +17,7 @@
                     <h4 style="color: #555; margin-bottom: 0">{% trans "Paid to" %}:</h4>
                     {{ member.full_name }},
                     <p style="font-size: .9em; line-height: 1.4em; margin-top: .3em">
-                        <ins>Amount</ins>: {{ cash_out_request.amount|intcomma }}<br>
+                        <ins>Amount</ins>: {{ cash_out_request.amount_paid|intcomma }}<br>
                         <ins>Method</ins>: {{ cash_out_request.method }}<br>
                         {% if cash_out_request.account_number %}
                             <ins>Account number</ins>: {{ cash_out_request.account_number }}<br>
