--- a/core/templates/core/dashboard_base.html
+++ b/core/templates/core/dashboard_base.html
@@ -7,7 +7,7 @@
 
 {% block head_style %}
     {{ block.super }}
-    <link rel='stylesheet' href="{% static 'ikwen/css/dashboard.css' %}" />
+    <link rel='stylesheet' href="{% static 'ikwen/css/dashboard.css' %}?v=19.10.31" />
 {% endblock %}
 
 {% block breadcrumb_location %}
