--- a/static/ikwen/css/dashboard.css
+++ b/static/ikwen/css/dashboard.css
@@ -154,6 +154,7 @@
     float: right
 }
 @media (max-width: 767px) {
+    #admin-content > .container-fluid {padding-left: 10px; padding-right: 10px}
     .watch.last-week, .watch.last-28-days {margin-top: 25px}
     .show-details {font-size: 15px}
     #admin-content em.balance {font-size: 24px}
@@ -161,6 +162,7 @@
     .payments .view-payments {margin-top: 5px}
     .section-title {border-top: 1px solid #ddd;padding-top: 10px;margin-top: 25px;margin-bottom: 15px;font-size: 16px;}
     .section-title.performances {margin: 25px 0;}
+    .performances header {padding: 0}
     .performances .th {font-size: 15px}
     .ranking li {padding: 10px 5px;height: 42px;}
     .figure, .figure-lg {text-align: center}
