1 - sent_email_log_results.html moved to core/snippets 2 - Minor code improvements

--- a/core/templates/core/sent_email_detail.html
+++ b/core/templates/core/sent_email_detail.html
@@ -32,3 +32,12 @@
         </div>
     </div>
 {% endblock %}
+
+{% block js %}
+    {{ block.super }}
+    <script type="text/javascript">
+        (() => {
+            $('div#admin-nav .email-log').addClass('active');
+        })()
+       </script>
+{% endblock %}
