--- a/core/templates/core/base_bs.html
+++ b/core/templates/core/base_bs.html
@@ -12,7 +12,7 @@
 		{% block head_style %}
             <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css" integrity="sha384-oS3vJWv+0UjzBfQzYUhtDYW+Pj2yciDJxpsK1OYPAYjqT085Qq/1cq5FLXAZQ7Ay" crossorigin="anonymous">
             <link rel='stylesheet' href="{% static 'ikwen/css/flatly.bootstrap.min.css' %}" />
-            <link rel='stylesheet' href="{% static 'ikwen/css/base.css' %}?v=19.10.12" />
+            <link rel='stylesheet' href="{% static 'ikwen/css/base.css' %}?v=19.11.8" />
 		{% endblock %}
         {% block head_js %}
             <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
@@ -29,8 +29,8 @@
         <div id="top-notice-ctnr" style="display: none">
             <span class="floating-notice has-shade" style="float: none; position: static"> </span>
         </div>
-        <div class="progress" id="network-manager" style="display: none">
-            <div class="progress-bar progress-bar-success" role="progressbar" aria-valuenow="10" aria-valuemin="0" aria-valuemax="100" style="width: 0"></div>
+        <div class="progress" id="network-manager">
+            <div class="progress-bar progress-bar-success" role="progressbar" aria-valuenow="20" aria-valuemin="0" aria-valuemax="100" style="width: 20%"></div>
         </div>
         {% block header %}
             {% with collaborates_on=user.collaborates_on %}
@@ -234,7 +234,7 @@
                     if ($(window).width() < 992) {
                         $('.edge-panel-left').addClass('has-shade').appendTo('.edge-swipe-overlay')
                     }
-                    $( window ).resize(ikwen.debouncer(function (e) {
+                    $(window).resize(ikwen.debouncer(function (e) {
                         var winWidth = $(window).width();
                         if (winWidth < 768) {
                             if (!$('#navbar-search').is(':visible')) {
@@ -265,11 +265,12 @@
                     $('form#search input').focusout(function() {$('#navbar-results').fadeOut()});
                     ikwen.setupSearch('#search input', '#navbar-results', searchDescriptor);
                     window.addEventListener("beforeunload", (e) => {
-                        $('#network-manager').show().find('.progress-bar').animate({width: '20%'}, 100);
+                        $('#network-manager').show();
                     });
-                    window.addEventListener("unload", (e) => {
+                    window.onload = function() {
                         $('#network-manager .progress-bar').animate({width: '100%'}, 100);
-                    });
+                        $('#network-manager').hide().find('.progress-bar').css({width: '30%'});
+                    };
                 })()
             </script>
         {% endblock %}
