--- a/core/templates/core/dashboard_base.html
+++ b/core/templates/core/dashboard_base.html
@@ -7,7 +7,7 @@
 
 {% block head_style %}
     {{ block.super }}
-    <link rel='stylesheet' href="{% static 'ikwen/css/dashboard.css' %}?v=19.10.31" />
+    <link rel='stylesheet' href="{% static 'ikwen/css/dashboard.css' %}?v=19.11.15" />
 {% endblock %}
 
 {% block breadcrumb_location %}
@@ -16,7 +16,8 @@
 
 {% block admin_content %}
     <div id="admin-content">
-        <div class="container-fluid">
+        <div id="trend-chart" class="container"></div>
+        <div class="container-fluid business-trend">
             <h5 style="margin-top: 0">
                 <span>{% trans "Earnings" %} <span class="text-muted">({{ CRNCY.code }})</span> </span>
                 <a href="{% url 'billing:transaction_log' %}" class="show-details">{% trans "Details" %}</a>
@@ -173,16 +174,17 @@
     </div>
 {% endblock %}
 
+
 {% block js %}
     {{ block.super }}
     <script type="text/javascript">
         (function () {
             $('div#admin-nav .dashboard').addClass('active');
             $('#performances-period').on('click', 'li', function () {
-                var target = $(this).data('target'),
+                let target = $(this).data('target'),
                     targetLabel = $(this).find('a').text();
-                $('.performances .report').hide();
-                $('.performances .report.' + target).show();
+                $('.performances .report, .pie-chart').hide();
+                $(`.performances .report.${target}, .${target}-pie-chart`).show();
                 $('#period .target').text(targetLabel);
                 $('#performances-period li').show();
                 $(this).hide();
