--- a/static/ikwen/css/admin.css
+++ b/static/ikwen/css/admin.css
@@ -68,7 +68,7 @@ div#container.admin {padding-top: 110px;transition: all .2s;}
 .nav-pills>li.active>a, .nav-pills>li.active>a:hover, .nav-pills>li.active>a:focus {background: #f6f6f6;color: #333;}
 
 #admin-content {height: 100%;overflow: auto;position: absolute;width: 100%;}
-#admin-content .spinner {background: rgba(255, 255, 255, .6); height: 100%; padding-top: 20%; width: 100%; z-index: 100}
+#admin-content #results .spinner {background: rgba(255, 255, 255, .6); height: 100%; padding-top: 20%; width: 100%; z-index: 100}
 #admin-content > .spinner {margin-left: -250px; padding-top: 20%; position: absolute}
 
 .card-section {border: 1px solid #dedede; border-top-color: #e9e9e9; padding-bottom: 15px;margin-bottom: 30px;}
