--- a/static/ikwen/css/base.css
+++ b/static/ikwen/css/base.css
@@ -67,7 +67,7 @@ body {color: #464646;}
 .btn .spinner-container .path {stroke: rgba(162, 162, 162, 0.85);}
 .btn.processing, .btn.processing:hover, .btn.processing:hover:active {background: #ddd;border-color: #9e9e9e;color: #777777;min-width: 170px;position: relative;transition: all .3s;}
 .btn:not(.processing) .spinner {display: none; transition: all .3s}
-.btn.processing .spinner {display: block;position: absolute;top: 4px;}
+.btn.processing .spinner {background: none;display: block;height: auto;left: auto;padding-top: 0;position: absolute;top: 4px;width: auto;}
 @keyframes rotate {
     100% { transform: rotate(360deg); }
 }
@@ -114,7 +114,7 @@ body {color: #464646;}
 .ik-li.clearfix {border-bottom: none}
 .member:hover, .ik-li:hover {background: #f8f8f8}
 .member.active, .ik-li.active {background: #f8f6f6;}
-.member .photo, .ik-li .image {background: no-repeat center;background-size: 100% auto;float: left;height: 60px;width: 60px;}
+.member .photo, .ik-li .image {background: no-repeat center;background-size: cover;float: left;height: 60px;width: 60px;}
 .member .photo, .ik-li .image.rounded {border-radius: 30px; overflow: hidden}
 .member .info, .ik-li .info {float: left;margin-left: 10px;max-width: 225px;width: auto;}
 .member .full_name, .ik-li .name, .ik-li .title {cursor: pointer;color: #333;font-size: 15px;padding: 5px 0 0;}
@@ -272,8 +272,8 @@ time {color: #888;float: right;font-size: 11px; font-weight: normal; padding: 0;
 .dropdown-menu>li>a:hover, .dropdown-menu>li>a:focus {color: #7b8a8b;background-color: #eee}
 .btn .glyphicon, .btn .fa {margin: 0 10px 0 -10px}
 
-.btn-outline-success {background-color: transparent;background-image: none;border-color: #FFC107;color: #FFC107;}
-.btn-outline-success:hover, .btn-outline-success:active, .btn-outline-success:active:hover {background-color: #FFC107; border-color: #FFC107; color: #fff}
+.btn-outline-success {background-color: transparent;background-image: none;border-color: #007bff;color: #007bff;}
+.btn-outline-success:hover, .btn-outline-success:active, .btn-outline-success:active:hover {background-color: #007bff; border-color: #007bff; color: #fff}
 .btn-outline-white {background-color: transparent;background-image: none;border-color: #fff;color: #fff;}
 .btn-outline-white:hover {background-color: #fff; border-color: #fff; color: #01244F}
 .btn-outline-success:focus, .btn-outline-success.focus {box-shadow: 0 0 0 0.2rem rgba(40, 167, 69, 0.5)}
