--- a/static/ikwen/css/dashboard.css
+++ b/static/ikwen/css/dashboard.css
@@ -153,8 +153,8 @@
 #trend-chart {width: 100%;height: 400px; overflow: hidden!important;}
 #trend-chart > div { margin-left: -14px!important; }
 .business-trend {margin-top: 11vh;}
-.pie-chart {width: 100%; height: 200px;}
-.line-chart {width: 100%; height: 200px; overflow: hidden!important;}
+.pie-chart {clear: both; height: 200px;width: 100%}
+.line-chart {height: 200px; overflow: hidden!important;width: 100%}
 .line-chart > div { margin-left: -24px!important;}
 
 @media (max-width: 767px) {
