--- a/accesscontrol/templates/accesscontrol/profile.html
+++ b/accesscontrol/templates/accesscontrol/profile.html
@@ -37,7 +37,7 @@
 {% endblock %}
 {% block head_style %}
     {{ block.super }}
-    <link href="{% static 'ikwen/css/console.css' %}?v=19.9.30" media="screen" rel="stylesheet" type="text/css" />
+    <link href="{% static 'ikwen/css/console.css' %}?v=19.11.26" media="screen" rel="stylesheet" type="text/css" />
     <link rel='stylesheet' href="{% static 'ikwen/swiper/css/swiper.min.css' %}" />
     <style>
         body {background: #f6f6f6; padding-bottom: 200px}
@@ -101,9 +101,9 @@
         <div class="edge-panel-left visible-xs">
             <div class="wrapper">
                 <div class="stage">
-                    <div class="logo text-center">
+                    <a class="logo text-center" href="{% url 'home' %}">
                         <img src="{% static 'ikwen/img/logo_ikwen_2018.png' %}" alt="ikwen logo" />
-                    </div>
+                    </a>
                     <div class="menu console-menu">
                         <h4 class="text-muted">
                             <div class="disc coupon">
