1 - Support for payment sharing with Dara for ikwen invoices 2 - Import and pull invoice APIs improved

--- a/billing/templates/billing/transaction_log.html
+++ b/billing/templates/billing/transaction_log.html
@@ -166,7 +166,7 @@
     {{ block.super }}
     <script type="text/javascript">
         (function() {
-            $('div#admin-nav .subscriptions').addClass('active');
+            $('div#admin-nav .transaction-log').addClass('active');
             $('#start-date').datepicker({
                 altField: "#start-alt",
                 altFormat: "yy-mm-dd"
