--- a/core/templates/core/object_list_base.html
+++ b/core/templates/core/object_list_base.html
@@ -13,7 +13,7 @@
     <div id="admin-content">
         <div class="container-fluid stage">
             {% include 'core/snippets/admin_tools.html' %}
-            <div id="results">
+            <div id="results" class="results-stage">
                 {% include html_results_template_name %}
             </div>
         </div>
